// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.component renders with minimal props 1`] = `
"<div class=\\"fieldset\\"><style></style><div class=\\"row \\"><style></style><div class=\\"label\\"><div class=\\"col-12 \\"><label class=\\"manor-body1 manor-spacing-label-to-field w-full\\"></label></div></div><style>.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\"><div class=\\"col-sm-10 \\"><style></style><div class=\\"input-container\\"><div class=\\"input-wrap  input-border  \\"><div class=\\"input-clear-wrap\\"><input id=\\"test-id\\" name=\\"test-id\\" type=\\"text\\" placeholder=\\"\\" autocomplete=\\"off\\" class=\\"
                  input-default
                  
                \\" value=\\"\\"></div></div><div class=\\"supporting-elements\\"></div></div></div><style>.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\"><div class=\\"col-sm-10 \\"><div class=\\"relative w-full\\"></div></div><style>.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div>"
`;

exports[`Input.component renders with props 1`] = `
"<div class=\\"fieldset\\"><style></style><div class=\\"row \\"><style></style><div class=\\"label\\"><div class=\\"col-12 \\"><label class=\\"manor-body1 manor-spacing-label-to-field w-full\\">input label</label></div></div><style>.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\"><div class=\\"col-sm-10 \\"><style></style><div class=\\"input-container\\"><div class=\\"input-wrap  input-border  \\"><div class=\\"input-clear-wrap\\"><input id=\\"test-id\\" name=\\"test-id\\" type=\\"text\\" placeholder=\\"placeholder test\\" autocomplete=\\"on\\" class=\\"
                  input-default
                  
                \\" value=\\"\\"></div></div><div class=\\"supporting-elements\\"></div></div></div><style>.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div><div class=\\"row \\"><div class=\\"col-sm-10 \\"><div class=\\"relative w-full\\"></div></div><style>.row {
        @apply flex flex-wrap -mx-16;
      }
      </style></div></div>"
`;
